# projetQT

./: AvatarItem.cpp  AvatarItem.h  CMakeLists.txt  MainScene.cpp  MainScene.h  Menu.cpp  Menu.h  README.md  RectItem.cpp  RectItem.h  Utils.h  main.cpp  mainWindow.cpp  mainWindow.h  truc.cpp
img/: record.txt
